[gd_scene load_steps=8 format=3 uid="uid://dgn1arb8c8e44"]

[ext_resource type="Script" uid="uid://cj82fq6duux0y" path="res://Scenes/MatchScene/MatchUI/TeamTacticsUI.gd" id="1_se1cr"]
[ext_resource type="PackedScene" uid="uid://besq01chm6eix" path="res://Scenes/MatchScene/MatchUI/ReceiveOptionsUI.tscn" id="2_xc2ht"]
[ext_resource type="PackedScene" uid="uid://bn7njj16hwoye" path="res://Scenes/MatchScene/MatchUI/ServeOptionsUI.tscn" id="3_h46rf"]
[ext_resource type="PackedScene" uid="uid://bpb8ra3kywlo6" path="res://Scenes/MatchScene/MatchUI/CourtRepresentationUI.tscn" id="3_uij1t"]
[ext_resource type="Script" uid="uid://bd7qwn0vq2vnk" path="res://Scenes/MatchScene/MatchUI/ServeOptionsUI.gd" id="4_8bssx"]
[ext_resource type="Script" uid="uid://12ywadewyvax" path="res://Scenes/MatchScene/MatchUI/BlockOptionsUI.gd" id="4_ev5x7"]
[ext_resource type="PackedScene" uid="uid://cykoixxohrpxa" path="res://Scenes/MatchScene/MatchUI/BlockingIndividualUI.tscn" id="5_v884v"]

[node name="TeamTacticsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_se1cr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1820.0
offset_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 50.0
alignment = 1

[node name="ServeUIButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Serve"

[node name="ReceiveUIButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Receive"

[node name="SetUIButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Set"

[node name="BlockUIButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Block"

[node name="Button4" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ReceiveOptionsUI" parent="." instance=ExtResource("2_xc2ht")]
visible = false

[node name="ServeOptionsUI" parent="." instance=ExtResource("3_h46rf")]
script = ExtResource("4_8bssx")

[node name="SetOptionsUI" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BlockOptionsUI" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_top = -95.0
offset_right = 40.0
offset_bottom = -55.0
script = ExtResource("4_ev5x7")

[node name="HBoxContainer2" type="HBoxContainer" parent="BlockOptionsUI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 1077.0
offset_right = 1780.0
offset_bottom = 1173.0
grow_horizontal = 2
alignment = 1

[node name="Rot1Button" type="Button" parent="BlockOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 1"

[node name="Rot2Button" type="Button" parent="BlockOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 2"

[node name="Rot3Button" type="Button" parent="BlockOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 3"

[node name="Rot4Button" type="Button" parent="BlockOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 4"

[node name="Rot5Button" type="Button" parent="BlockOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 5"

[node name="Rot6Button" type="Button" parent="BlockOptionsUI/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation 6"

[node name="DisplayedRotationLabel" type="Label" parent="BlockOptionsUI"]
layout_mode = 0
offset_left = 651.0
offset_top = 186.0
offset_right = 777.0
offset_bottom = 217.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Rotation 1"

[node name="Button" type="Button" parent="BlockOptionsUI"]
layout_mode = 0
offset_left = 29.0
offset_top = 179.0
offset_right = 117.0
offset_bottom = 210.0
text = "Substitute"

[node name="CourtRepresentationUI" parent="BlockOptionsUI" instance=ExtResource("3_uij1t")]
layout_mode = 0
offset_left = 1809.0
offset_top = 206.0
offset_right = 3609.0
offset_bottom = 1306.0

[node name="Blockers" type="GridContainer" parent="BlockOptionsUI"]
layout_direction = 2
layout_mode = 0
offset_left = 16.0
offset_top = 237.0
offset_right = 1303.0
offset_bottom = 927.0
columns = 3

[node name="LeftBlockerUI" parent="BlockOptionsUI/Blockers" instance=ExtResource("5_v884v")]
layout_direction = 2
layout_mode = 2

[node name="MiddleBlockerUI" parent="BlockOptionsUI/Blockers" instance=ExtResource("5_v884v")]
layout_mode = 2

[node name="RightBlockerUI" parent="BlockOptionsUI/Blockers" instance=ExtResource("5_v884v")]
layout_mode = 2

[node name="CurrentRotationButton" type="Button" parent="BlockOptionsUI"]
layout_mode = 0
offset_left = 777.0
offset_top = 183.0
offset_right = 916.0
offset_bottom = 214.0
text = "Go To Current Rotation"

[node name="ServeReceiveOptionButton" type="OptionButton" parent="BlockOptionsUI"]
layout_mode = 0
offset_left = 417.0
offset_top = 182.0
offset_right = 627.0
offset_bottom = 220.0
tooltip_text = "Blockers may swap positions from serve to receive depending on if players are remaining on the side they receive the ball"
item_count = 2
selected = 0
popup/item_0/text = "Receive"
popup/item_0/id = 0
popup/item_1/text = "Serve"
popup/item_1/id = 1

[connection signal="pressed" from="HBoxContainer/ServeUIButton" to="." method="_on_ServeUIButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ReceiveUIButton" to="." method="_on_receive_ui_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SetUIButton" to="." method="_on_set_ui_button_pressed"]
[connection signal="pressed" from="HBoxContainer/BlockUIButton" to="." method="_on_block_ui_button_pressed"]
[connection signal="pressed" from="BlockOptionsUI/HBoxContainer2/Rot1Button" to="BlockOptionsUI" method="_on_rot_1_button_pressed"]
[connection signal="pressed" from="BlockOptionsUI/HBoxContainer2/Rot2Button" to="BlockOptionsUI" method="_on_rot_2_button_pressed"]
[connection signal="pressed" from="BlockOptionsUI/HBoxContainer2/Rot3Button" to="BlockOptionsUI" method="_on_rot_3_button_pressed"]
[connection signal="pressed" from="BlockOptionsUI/HBoxContainer2/Rot4Button" to="BlockOptionsUI" method="_on_rot_4_button_pressed"]
[connection signal="pressed" from="BlockOptionsUI/HBoxContainer2/Rot5Button" to="BlockOptionsUI" method="_on_rot_5_button_pressed"]
[connection signal="pressed" from="BlockOptionsUI/HBoxContainer2/Rot6Button" to="BlockOptionsUI" method="_on_rot_6_button_pressed"]
[connection signal="pressed" from="BlockOptionsUI/CurrentRotationButton" to="BlockOptionsUI" method="_on_current_rotation_button_pressed"]
[connection signal="item_selected" from="BlockOptionsUI/ServeReceiveOptionButton" to="BlockOptionsUI" method="_on_serve_receive_option_button_item_selected"]
